--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -855,5 +855,12 @@
                 <data android:scheme="package"/>
             </intent-filter>
         </receiver>
+
+        <receiver android:name="com.android.settingslib.wifi.WifiTimeoutReceiver">
+            <intent-filter>
+                <action android:name="android.net.wifi.intent.TIMEOUT" />
+            </intent-filter>
+        </receiver>
+
     </application>
 </manifest>
